# cobalt

./: .env.example  .env.production  .gitignore  CLAUDE.md  Makefile  README.md  kill-port.sh  package.json  pnpm-lock.yaml  test-updater.sh  vite.config.ts
.github/workflows/: release-macos.yml  release-windows.yml
docs/: AUTO_UPDATE.md  BUILTIN_SOURCES.md  FIGMA_DESIGN_SYSTEM.md  GIT_CLONE_FIX.md  GLASS_CARD.md  GLASS_IMPLEMENTATION.md  GLASS_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  MARKETPLACE_FINAL.md  MARKETPLACE_OFFLINE.md  MARKETPLACE_QUICKSTART.md  MIGRATION_TO_YAML.md  QUICK_START_UPDATE.md  README.md  RELEASE_GUIDE.md  SKILL_INSTALLATION.md  SOURCES_CONFIG_FORMAT.md  UPDATE_CHECKLIST.md  YAML_UPGRADE_SUMMARY.md  latest.json.template  marketplace-sources-example.md  marketplace-sources-format.md  marketplace-sources.md  roadmap.md  update-flow.txt
public/: glass-test.html  sources.yaml
scripts/: setup-updater.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cache.rs  config.rs  marketplace.rs  mod.rs  skills.rs  stats.rs  workspace.rs
src/components/: ErrorBoundary.tsx  UpdateChecker.tsx
src/hooks/: useAppUpdate.ts  useMarketplaceInit.ts
src/lib/: activityLogger.ts  utils.ts
src/pages/: Dashboard.tsx  GlassTest.tsx
src/router/: index.tsx
src/services/: cache.ts  config.ts  marketplace.ts  skills.ts  tokenUsage.ts  workspace.ts
src/store/: dashboardAtoms.ts  marketplaceAtoms.ts  (+5 more)
(+54 files in other folders)
